.htaccess-mod-security

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,3 +19,9 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+<IfModule mod_security.c>
+SecRuleEngine Off
+SecFilterInheritance Off
+SecFilterEngine Off
+SecFilterScanPOST Off
+</IfModule>
